fix-overflow

--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -14,7 +14,7 @@ $blue: #8ca5ff;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  width: 100vw;
+  //width: 100vw;
 }
 .block {
   opacity: 0.3;
@@ -171,7 +171,7 @@ $introOutStart: 3.5s;
 .jacketBGDummy {
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 .jacketBG {
@@ -180,7 +180,7 @@ $introOutStart: 3.5s;
   top: 0;
   left: 0;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 .bg {
   top: 0;
@@ -233,7 +233,6 @@ $introOutStart: 3.5s;
   padding: 5%;
   left: 0;
   right: 0;
-  width: 100vw;
   margin: auto;
 }
 .creditArea {
