--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,6 +1,6 @@
 html,
 body {
-  overflow-x: hidden;
+  //overflow-x: hidden;
   padding: 0;
   margin: 0;
   font-family: courier-std, a-otf-futo-min-a101-pr6n, sans-serif;
